StereoKit/Native/NativeAPI.cs


		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern IntPtr              material_find       (string id);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              material_create     (IntPtr shader);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              material_copy       (IntPtr material);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern IntPtr              material_copy_id    (string id);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern void                material_set_id     (IntPtr material, string id);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern IntPtr              material_get_id     (IntPtr material);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                material_addref     (IntPtr material);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                material_release    (IntPtr material);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                material_set_transparency(IntPtr material, Transparency mode);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                material_set_cull   (IntPtr material, Cull mode);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                material_set_wireframe(IntPtr material, int wireframe);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                material_set_depth_test(IntPtr material, DepthTest depth_test_mode);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                material_set_depth_write(IntPtr material, int write_enabled);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                material_set_queue_offset(IntPtr material, int offset);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                material_set_chain  (IntPtr material, IntPtr chain_material);
		[DllImport(dll, CallingConvention = call                 )] public static extern Transparency        material_get_transparency(IntPtr material);
		[DllImport(dll, CallingConvention = call                 )] public static extern Cull                material_get_cull   (IntPtr material);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 material_get_wireframe(IntPtr material);
		[DllImport(dll, CallingConvention = call                 )] public static extern DepthTest           material_get_depth_test(IntPtr material);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 material_get_depth_write(IntPtr material);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 material_get_queue_offset(IntPtr material);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              material_get_chain  (IntPtr material);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern void                material_set_float  (IntPtr material, string name, float value);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern void                material_set_vector2(IntPtr material, string name, Vec2 value);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern void                material_set_vector3(IntPtr material, string name, Vec3 value);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern void                material_set_color  (IntPtr material, string name, Color color_gamma);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern void                material_set_vector4(IntPtr material, string name, Vec4 value);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern void                material_set_vector (IntPtr material, string name, Vec4 value);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern void                material_set_int    (IntPtr material, string name, int value);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern void                material_set_int2   (IntPtr material, string name, int value1, int value2);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern void                material_set_int3   (IntPtr material, string name, int value1, int value2, int value3);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern void                material_set_int4   (IntPtr material, string name, int value1, int value2, int value3, int value4);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern void                material_set_bool   (IntPtr material, string name, int value);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern void                material_set_uint   (IntPtr material, string name, uint value);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern void                material_set_uint2  (IntPtr material, string name, uint value1, uint value2);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern void                material_set_uint3  (IntPtr material, string name, uint value1, uint value2, uint value3);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern void                material_set_uint4  (IntPtr material, string name, uint value1, uint value2, uint value3, uint value4);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern void                material_set_matrix (IntPtr material, string name, Matrix value);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern int                 material_set_texture(IntPtr material, string name, IntPtr value);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 material_set_texture_id(IntPtr material, ulong id, IntPtr value);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern float               material_get_float  (IntPtr material, string name);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern Vec2                material_get_vector2(IntPtr material, string name);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern Vec3                material_get_vector3(IntPtr material, string name);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern Color               material_get_color  (IntPtr material, string name);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern Vec4                material_get_vector4(IntPtr material, string name);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern int                 material_get_int    (IntPtr material, string name);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern int                 material_get_bool   (IntPtr material, string name);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern uint                material_get_uint   (IntPtr material, string name);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern Matrix              material_get_matrix (IntPtr material, string name);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern IntPtr              material_get_texture(IntPtr material, string name);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern int                 material_has_param  (IntPtr material, string name, MaterialParam type);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern void                material_set_param  (IntPtr material, string name, MaterialParam type, in IntPtr value);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                material_set_param_id(IntPtr material, ulong id, MaterialParam type, in IntPtr value);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern int                 material_get_param  (IntPtr material, string name, MaterialParam type, out IntPtr out_value);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 material_get_param_id(IntPtr material, ulong id, MaterialParam type, out IntPtr out_value);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern void                material_get_param_info(IntPtr material, int index, out IntPtr out_name, out MaterialParam out_type);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 material_get_param_count(IntPtr material);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                material_set_shader (IntPtr material, IntPtr shader);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              material_get_shader (IntPtr material);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              material_buffer_create(int register_slot, int size);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                material_buffer_set_data(IntPtr buffer, in IntPtr buffer_data);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                material_buffer_release(IntPtr buffer);

		///////////////////////////////////////////
